@@ -3,11 +3,14 @@ http://svn.edgewall.org/repos/babel/tags/0.9.2/
 (?, from branches/stable/0.9.x)
 
  * Fixed catalogs' charset values not being recognized (ticket #66).
+ * Numerous improvements to the default plural forms.
  * Fixed fuzzy matching when updating message catalogs (ticket #82).
  * Fixed bug in catalog updating, that in some cases pulled in translations
    from different catalogs based on the same template.
  * Location lines in PO files do no longer get wrapped at hyphens in file
    names (ticket #79).
+ * Fixed division by zero error in catalog compilation on empty catalogs
+   (ticket #60).
 
 
 Version 0.9.1
